side padding to the hero section

--- a/css/_components.scss
+++ b/css/_components.scss
@@ -77,7 +77,7 @@ nav {
 section.hero {
   background: url("../img/basketball-25927902.png");
   background-size: cover;
-  padding: 10% 0;
+  padding: 10% 20px;
   .container {
     text-align: center;
     .contents {
