--- a/css/main.css
+++ b/css/main.css
@@ -97,12 +97,30 @@ section.hero .container .contents .d1 {
   color: #ff7904;
   text-transform: uppercase;
 }
+@media screen and (max-width: 735px) {
+  section.hero .container .contents .d1 {
+    font-size: 4em;
+  }
+}
 section.hero .container .contents p {
   font-size: 3em;
+}
+@media screen and (max-width: 735px) {
+  section.hero .container .contents p {
+    font-size: 2em;
+  }
 }
 section.hero .container .contents .button-row {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 735px) {
+  section.hero .container .contents .button-row {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding: 10px;
+  }
 }
 section.hero .container .contents .button-row button {
   background-color: #478e66;
@@ -110,6 +128,11 @@ section.hero .container .contents .button-row button {
   padding: 20px 60px;
   color: white;
   font-size: 1em;
+}
+@media screen and (max-width: 735px) {
+  section.hero .container .contents .button-row button {
+    margin-top: 30px;
+  }
 }
 section.hero .container .contents .button-row button:hover {
   background-color: #3c7c58;
