--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ nav .options a:hover {
 }
 
 section.hero {
-  background: url("../img/basketball-25927902.png");
+  background: url("../img/basketball-25927903.png");
   background-size: cover;
   padding: 10% 20px;
 }
@@ -96,6 +96,7 @@ section.hero .container .contents .d1 {
   font-size: 5em;
   color: #ff7904;
   text-transform: uppercase;
+  font-weight: 600;
 }
 @media screen and (max-width: 735px) {
   section.hero .container .contents .d1 {
