--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Poppins, Montserrat, Jost, ;
+  font-family: Poppins, Montserrat, Jost;
+  outline: none;
 }
 
 a {
