--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,11 @@ footer form {
   padding: 5% 10%;
   background-color: #050505;
 }
+@media screen and (max-width: 310px) {
+  footer form {
+    padding: 20px;
+  }
+}
 footer form h2 {
   text-transform: uppercase;
   text-align: center;
@@ -163,10 +168,22 @@ footer form .inputs {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 310px) {
+  footer form .inputs {
+    display: block;
+  }
+}
 footer form .inputs input {
   flex-grow: 1;
   padding: 20px 10px;
   font-size: 1em;
+}
+@media screen and (max-width: 310px) {
+  footer form .inputs input {
+    width: -webkit-fill-available;
+    display: block;
+    margin-bottom: 10px;
+  }
 }
 footer form .inputs button {
   padding: 0 20px;
@@ -174,6 +191,14 @@ footer form .inputs button {
   background-color: #478e66;
   color: white;
   border: none;
+}
+@media screen and (max-width: 310px) {
+  footer form .inputs button {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 20px 10px;
+  }
 }
 footer .btm-nav {
   display: flex;
