--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
   padding: 0;
   font-family: Poppins, Montserrat, Jost;
   outline: none;
+  box-sizing: border-box;
 }
 
 a {
@@ -180,7 +181,7 @@ footer form .inputs input {
 }
 @media screen and (max-width: 400px) {
   footer form .inputs input {
-    width: -webkit-fill-available;
+    width: 100%;
     display: block;
     margin-bottom: 10px;
   }
