--- a/css/_components.scss
+++ b/css/_components.scss
@@ -209,10 +209,89 @@ footer {
         padding: 20px;
       }
       a {
+        &:hover {
+          svg {
+            path {
+              fill: $orange;
+            }
+          }
+        }
         svg {
           path {
             fill: $green;
           }
+        }
+      }
+    }
+  }
+}
+
+section.latest-news {
+  padding: 20px;
+  h2 {
+    text-transform: uppercase;
+    font-size: 3.5em;
+  }
+  .news {
+    .top-news {
+      grid-gap: 50px;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      @include media-max(1210px) {
+        display: none;
+      }
+      .top-news-img {
+        img {
+          min-width: 100%;
+        }
+      }
+      .top-news-details {
+        display: flex;
+        flex-direction: column;
+        .title {
+          font-size: 2.5em;
+          font-weight: 600;
+          margin-bottom: auto;
+        }
+        .news-summary {
+          font-size: 1.5em;
+        }
+        .date {
+          margin-top: auto;
+          font-size: 1em;
+          color: #b9b9b9;
+        }
+      }
+    }
+    .other-news {
+      margin-top: 20px;
+      // padding: 20px;
+      display: grid;
+      grid-gap: 20px;
+      grid-template-columns: repeat(2, 1fr);
+      @include media-max(1210px) {
+        grid-gap: 10px;
+      }
+      @include media-max(900px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+      .new-news {
+        &:nth-of-type(3),
+        &:nth-of-type(4) {
+          display: none;
+        }
+        .news-img {
+          img {
+            min-width: 100%;
+          }
+        }
+        .title {
+          font-weight: 700;
+        }
+        .date {
+          margin-top: auto;
+          font-size: 1em;
+          color: #b9b9b9;
         }
       }
     }
