Teams index Page

--- a/css/_components.scss
+++ b/css/_components.scss
@@ -282,7 +282,7 @@ section.latest-news {
         }
         .news-img {
           img {
-            min-width: 100%;
+            max-width: 100%;
           }
         }
         .title {
